gitops-safe/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc-1
  namespace: humor-game
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      nodePort: 30022   # optional (must be between 30000–32767)
